--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.15.1",
     "intl-messageformat": "^10.1.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "next": "13.4.13",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
@@ -40,5 +42,8 @@
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.3.2"
   }
 }
